Header not fixed on mobile

--- a/themes/dsq/style.less
+++ b/themes/dsq/style.less
@@ -30,7 +30,7 @@ body
 {
 	background-color: @brand-base;
 	color: @white;
-	position: fixed;
+	position: relative;
 	width: 100%;
 
 	h1 a
@@ -365,6 +365,11 @@ and (min-width : 768px) {
 	{
 		max-width: 640px !important;
 		margin: auto !important;
+	}
+
+	#main-header
+	{
+		position: fixed;
 	}
 }
 
